added more stuff

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -14,14 +14,78 @@
             <a class="nav-link right-nav-link" href="/about">About</a>
             <a class="nav-link right-nav-link" href="/about">Cats</a>
             <a class="nav-link right-nav-link" href="/about">Bloodline</a>
+            <a class="nav-link right-nav-link" href="/about">Contact</a>
         </div>
     </nav>
     <div id="hero-overlay"></div>
     <div class="home-section" id="hero-section"></div>
-    <div class="home-section" id="mission-section"></div>
-    <div class="home-section" id="cat-section"></div>
-    <div class="home-section" id="bloodline-section"></div>
-    <div class="home-section" id="breeder-section"></div>
-    <div class="home-section" id="contact-section"></div>
+    <div class="home-section" id="mission-section">
+        <div class="header-container">
+            <p class="section-header">The Mission</p>
+        </div>
+        <div class="content-container">
+            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+            <p class="section-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
+                corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            </p>
+        </div>
+    </div>
+    <div class="home-section" id="cat-section">
+        <div class="header-container">
+            <p class="section-header">The Cats</p>
+        </div>
+        <div class="content-container">
+            <p class="section-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
+                corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            </p>
+            <div class="image-button-container">
+                <img class="section-image-small" src="/web/images/mina.jpeg" alt="">
+                <a class="section-link" href="/cats">View Kittens</a>
+            </div>
+        </div>
+    </div>
+    <div class="home-section" id="bloodline-section">
+        <div class="header-container">
+            <p class="section-header">The Bloodline</p>
+        </div>
+        <div class="content-container">
+            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+            <p class="section-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
+                corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            </p>
+        </div>
+    </div>
+    <div class="home-section" id="breeder-section">
+        <div class="header-container">
+            <p class="section-header">The Breeder</p>
+        </div>
+        <div class="content-container">
+            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+            <p class="section-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
+                corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            </p>
+        </div>
+    </div>
+    <div class="home-section" id="contact-section">
+        <div class="header-container">
+            <p class="section-header">Contact</p>
+        </div>
+        <div class="content-container">
+            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+            <p class="section-text">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
+                corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+            </p>
+        </div>
+    </div>
 </body>
 </html>
