--- a/web/html/index.html
+++ b/web/html/index.html
@@ -53,7 +53,10 @@
             <p class="section-header">The Bloodline</p>
         </div>
         <div class="content-container">
-            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+            <div class="image-button-container">
+                <img class="section-image-small" src="/web/images/mina.jpeg" alt="">
+                <a class="section-link" href="/bloodline">View Bloodline</a>
+            </div>
             <p class="section-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
@@ -66,12 +69,12 @@
             <p class="section-header">The Breeder</p>
         </div>
         <div class="content-container">
-            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
             <p class="section-text">
                 Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
                 Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
                 corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
             </p>
+            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
         </div>
     </div>
     <div class="home-section" id="contact-section">
