updated styling and added some JS

--- a/web/html/index.html
+++ b/web/html/index.html
@@ -6,6 +6,7 @@
     <title>Primal Bloodline</title>
     <link rel="stylesheet" href="web/css/index.css">
     <link href="https://fonts.googleapis.com/css2?family=Amita&display=swap" rel="stylesheet">
+    <script defer src="web/js/index.js"></script>
 </head>
 <body>
     <nav id="top-navbar">
@@ -17,7 +18,6 @@
             <a class="nav-link right-nav-link" href="/about">Contact</a>
         </div>
     </nav>
-    <div id="hero-overlay"></div>
     <div class="home-section" id="hero-section"></div>
     <div class="home-section" id="mission-section">
         <div class="header-container">
