--- a/web/html/index.html
+++ b/web/html/index.html
@@ -18,18 +18,19 @@
             <a class="nav-link right-nav-link" href="/about">Contact</a>
         </div>
     </nav>
-    <div class="home-section" id="hero-section"></div>
-    <div class="home-section" id="mission-section">
-        <div class="header-container">
-            <p class="section-header">The Mission</p>
-        </div>
-        <div class="content-container">
-            <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
-            <p class="section-text">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
-                Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
-                corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
-            </p>
+    <div class="home-section" id="hero-section">
+        <div id="mission-section">
+            <div class="header-container">
+                <p class="section-header">The Mission</p>
+            </div>
+            <div class="content-container">
+                <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
+                <p class="section-text">
+                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+                    Provident atque iste, ab, officia maiores inventore exercitationem nihil culpa 
+                    corporis quis quibusdam commodi animi, eos incidunt excepturi explicabo qui optio ipsum!
+                </p>
+            </div>
         </div>
     </div>
     <div class="home-section" id="cat-section">
