--- a/web/html/index.html
+++ b/web/html/index.html
@@ -9,7 +9,7 @@
     <script defer src="web/js/index.js"></script>
 </head>
 <body>
-    <nav id="top-navbar">
+    <nav class="top" id="top-navbar">
         <a id="left-nav-link" class="nav-link" href="/">Primal Bloodline</a>
         <div id="right-nav-links">
             <a class="nav-link right-nav-link" href="/about">About</a>
@@ -20,10 +20,10 @@
     </nav>
     <div class="home-section" id="hero-section">
         <div id="mission-section">
-            <div class="header-container">
+            <div class="header-container" id="mission-header">
                 <p class="section-header">The Mission</p>
             </div>
-            <div class="content-container">
+            <div class="content-container" id="mission-content">
                 <img class="section-image-large" src="/web/images/mina.jpeg" alt="">
                 <p class="section-text">
                     Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
